--- a/agregar.html
+++ b/agregar.html
@@ -110,8 +110,8 @@
 
       fetch(URL_SCRIPT, {
         method: 'POST',
-        headers: { 'Content-Type': 'application/json' },
-        body: JSON.stringify(datos)
+        headers: { 'Content-Type': 'application/x-www-form-urlencoded' },
+        body: new URLSearchParams(datos)
       })
       .then(res => res.text())
       .then(msg => {
