--- a/index.html
+++ b/index.html
@@ -215,7 +215,15 @@
       });
       cargarGlosario();
     });
-  </script>
+  <script>
+  if ('serviceWorker' in navigator) {
+    window.addEventListener('load', () => {
+      navigator.serviceWorker.register('serviceWorker.js')
+        .then(reg => console.log('Service Worker registrado ✅'))
+        .catch(err => console.error('Error al registrar Service Worker ❌', err));
+    });
+  }
+</script>
   
 </body>
 </html>
